--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,21 @@ form .title {
     color: #fff;
 }
 form input{
- 
+
     border-radius: 3rem;
     padding: 4% ;
     margin-top: 6%;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid var(--secnt-color);
+    transition: 0.5s;
+    
 }
+form input:focus {
+    border: 2px solid #fff;
+    box-shadow: 0 0 10px 0 var(--secnt-color) inset;;
+}
+
 
 form button {
     margin-top: 6%;
@@ -74,7 +84,7 @@ form button {
     text-transform: uppercase;
     font-weight: 700;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    
+
 }
 .btn:hover {
     
@@ -94,4 +104,8 @@ form button {
     border-bottom: 1px solid white;
     transition: 350ms;
     border-radius: 2px;
+    padding-bottom: 3.8px;
 }
+
+
+  
