--- a/css/style.css
+++ b/css/style.css
@@ -1,111 +1,134 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    border: none;
-    text-decoration: none;
-    font-family:Georgia, 'Times New Roman', Times, serif
+  margin: 0px;
+  padding: 0px;
+  border: none;
+  text-decoration: none;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-:root{
-    --backgroudColor: rgb(255, 182, 156);
-    --secnt-color: rgba(63, 3, 132, 0.642);
+:root {
+  --backgroudColor: rgb(255, 182, 156);
+  --secnt-color: rgba(63, 3, 132, 0.642);
 }
 
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 body {
-    background: linear-gradient(to top ,var(--backgroudColor), var(--secnt-color));
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+  background: linear-gradient(
+    to top,
+    var(--backgroudColor),
+    var(--secnt-color)
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
-form {
-    height: 270px;
-    width: 250px;
-    background-color: var(--secnt-color);
-    padding: 2rem;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 2rem;
-    box-shadow: 10px 10px 8px #151515;
-    letter-spacing: 0.3rem;
-    padding-top: 50px;
-    
+.main {
+  height: 270px;
+  width: 250px;
+  background-color: var(--secnt-color);
+  padding: 2rem;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2rem;
+  box-shadow: 10px 10px 10px #151515;
+  letter-spacing: 0.3rem;
+  padding-top: 50px;
 }
-form .title {
-    margin-bottom: 20px;
-    top: 0px;
-    font-size: 2.4rem;
-    color: #fff;
+.title {
+  
+  font-size: 2.4rem;
+  color: #fff;
 }
-form input{
-
-    border-radius: 3rem;
-    padding: 4% ;
-    margin-top: 6%;
-    outline: none;
-    box-sizing: border-box;
-    border: 2px solid var(--secnt-color);
-    transition: 0.5s;
-    
+.main input {
+  border-radius: 3rem;
+  padding: 4%;
+  margin-top: 6%;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid var(--secnt-color);
+  transition: 0.5s;
 }
-form input:focus {
-    border: 2px solid #fff;
-    box-shadow: 0 0 10px 0 var(--secnt-color) inset;;
-}
-
-
-form button {
-    margin-top: 6%;
-    background-color: rgb(55, 137, 231);
-    color: #fff;
-    font-weight:300 ;
-    font-size: 1.6rem;
+.main input:focus {
+  border: 2px solid #fff;
+  box-shadow: 0 0 10px 0 var(--secnt-color) inset;
 }
 
-.btn {
-    box-sizing: border-box;
-    appearance: none;
-    background-color: var(--backgroudColor);
-    border: 2px solid transparent;
-    border-radius: 2em;
-    color: var(--secnt-color);
-    cursor: pointer;
-    display: flex;
-    align-self: center;
-    font-size: 1.2rem;
-    font-weight: 400;
-    margin: 20px;
-    padding: 0.8em 2.2em;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-
+/* --------------Butonlar--------------- */
+.main button {
+  margin-top: 6%;
+  background-color: rgb(55, 137, 231);
+  color: #fff;
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+.newPassword-main .btn,
+.main .btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: var(--backgroudColor);
+  border: 2px solid transparent;
+  border-radius: 2em;
+  color: var(--secnt-color);
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 20px;
+  padding: 0.8em 2.2em;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .btn:hover {
-    
-    border: 2px solid #fff;
-    border-color: rgb(255, 255, 255);
-    color: #fff;
-    transition: all 300ms ease-in-out;
-    box-shadow: 0 0 10px 0 #fff inset, 0 0 10px 4px #fff;
-    background-color: transparent;
+  border: 2px solid #fff;
+  border-color: rgb(255, 255, 255);
+  color: #fff;
+  transition: all 300ms ease-in-out;
+  box-shadow: 0 0 10px 0 #fff inset, 0 0 10px 4px #fff;
+  background-color: transparent;
 }
-.newPassword {
-    color: white;
-    border-bottom: 1px solid transparent;
-    font-size: 1.3rem;
+
+/* ----------Şifre-Yenileme-Ekranı------------- */
+
+.newPasswordLink {
+  color: white;
+  border-bottom: 1px solid transparent;
+  font-size: 1.3rem;
 }
-.newPassword:hover {
-    border-bottom: 1px solid white;
-    transition: 350ms;
-    border-radius: 2px;
-    padding-bottom: 3.8px;
+.newPasswordLink:hover {
+  border-bottom: 1px solid white;
+  transition: 350ms;
+  border-radius: 2px;
+  padding-bottom: 3.8px;
+}
+
+.newPassword-main {
+  width: 340px;
+  height: 235px;
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: var(--secnt-color);
+  border-radius: 2rem;
+  box-shadow: 10px 10px 10px #151515;
 }
 
 
-  
+.newPassword-main input {
+  border-radius: 25px;
+  border: 2px solid var(--secnt-color);
+  padding: 4%;
+  margin: 0 13%;
+}
+.newPassword-main input:focus {
+  border: 2px solid #fff;
+  box-shadow: 0 0 10px 0 var(--secnt-color) inset;
+  outline: none;
+  box-sizing: border-box;
+}
